--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@example/basics",
+  "name": "retos.dev",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -11,17 +11,17 @@
     "lint": "standard"
   },
   "devDependencies": {
-    "@astrojs/preact": "0.1.3",
-    "@astrojs/tailwind": "0.2.1",
-    "@commitlint/cli": "17.0.2",
-    "@commitlint/config-conventional": "17.0.2",
-    "astro": "1.0.0-beta.47",
+    "@astrojs/preact": "0.5.2",
+    "@astrojs/tailwind": "0.2.5",
+    "@commitlint/cli": "17.0.3",
+    "@commitlint/config-conventional": "17.0.3",
+    "astro": "1.0.0-rc.7",
     "husky": "8.0.1",
-    "preact": "10.8.1",
+    "preact": "10.10.1",
     "standard": "17.0.0"
   },
   "dependencies": {
-    "@supabase/supabase-js": "1.35.3",
+    "@supabase/supabase-js": "1.35.6",
     "supabase": "0.5.0"
   },
   "eslintConfig": {
