--- a/package.json
+++ b/package.json
@@ -15,18 +15,20 @@
     "@astrojs/tailwind": "0.2.5",
     "@commitlint/cli": "17.0.3",
     "@commitlint/config-conventional": "17.0.3",
+    "@typescript-eslint/parser": "5.32.0",
     "astro": "1.0.0-rc.7",
     "husky": "8.0.1",
     "preact": "10.10.1",
-    "standard": "17.0.0"
+    "eslint": "8.21.0",
+    "eslint-config-standard": "17.0.0",
+    "eslint-plugin-astro": "0.16.0",
+    "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-n": "15.2.4",
+    "eslint-plugin-promise": "6.0.0",
+    "prettier": "2.7.1",
+    "prettier-plugin-astro": "0.3.0"
   },
   "dependencies": {
-    "@supabase/supabase-js": "1.35.6",
-    "supabase": "0.5.0"
-  },
-  "eslintConfig": {
-    "extends": [
-      "standard"
-    ]
+    "@supabase/supabase-js": "1.35.6"
   }
 }
